Fix bugs and remove redundant code